force-app/main/default/objects/Scheme_Configuration__c/Scheme_Configuration__c.object-meta.xml
<CustomObject>
    <label>Scheme Configuration</label>
    <nameField>
        <label>Scheme Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheme Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>