force-app/main/default/objects/Scheme_Configuration__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF(AND(ISPICKVAL(Brokerage_Scheme__r.Approval_Status__c, &apos;Approved by Level 2&apos;),Brokerage_Scheme__r.Active__c == true) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>