force-app/main/default/objects/Scheme_Configuration__c/fields/Brokerage_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Scheme__c</fullName>
    <label>Brokerage Scheme</label>
    <referenceTo>Brokerage_Scheme__c</referenceTo>
    <relationshipLabel>Scheme Configurations</relationshipLabel>
    <relationshipName>Scheme_Configurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>