force-app/main/default/objects/Scheme_Configuration__c/fields/Scheme_Configuration_Unique_No__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Configuration_Unique_No__c</fullName>
    <displayFormat>SC-{000000}</displayFormat>
    <label>Scheme Configuration Unique No.</label>
    <type>AutoNumber</type>
</CustomField>