force-app/main/default/objects/Scheme_Configuration__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>TEXT(Brokerage_Scheme__r.Type__c )</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>