force-app/main/default/objects/Scheme_Configuration__c/validationRules/Cannot_Edit_Scheme_Configuration.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Scheme_Configuration</fullName>
    <active>true</active>
    <description>Cannot Edit Scheme Configuration if Scheme is Approved by L2.</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
NOT(ISNEW()),
text(Brokerage_Scheme__r.Approval_Status__c)= &apos;Approved by Level 2&apos;
)</errorConditionFormula>
    <errorMessage>You cannot edit Scheme Configuration details.</errorMessage>
</ValidationRule>